# CampusConnect

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_update.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
.github/scripts/: activity-reminder.js  assignment.js  claim.js  comments.js  constants.js  expiration.js  helpers.js  index.js  issue-comments.js  lifecycle.js  metadata.js  permissions.js  pr.js  regex.js
.github/workflows/: 03-assignment.yml  04-claim-expiration.yml  05-pr-check.yml  06-pr-merged.yml  07-issue-comments.yml  08-welcome.yml  09-issue-lifecycle.yml  10-pr-status-monitor.yml  10-stale-issues.yml  11-auto-approve-ci.yml  12-activity-reminder.yml  13-pr-size-labeler.yml  cd.yml  ci.yml  codeql.yml  health-check.yml  label-merged-pr.yml  pr-auto-merge.yml  pr-verification.yml  sync-pr-issue-data.yml  sync-pr-issue.yml  (+1 more)
scripts/: add-good-labels.ts  create-20-hard-issues.ts  create-32-mixed-issues.ts  create-backend-issues.ts  create-frontend-issues.ts  create-new-issues.ts  remove-assignees.ts  update-contributors.js  update_contributors.js
services/realtime-proxy/: Cargo.toml  Dockerfile  README.md
services/realtime-proxy/src/: broadcaster.rs  config.rs  lib.rs  listener.rs  main.rs  sse.rs
src/: App.tsx  routeTree.gen.ts  styles.css  test-setup.ts
supabase/: README.md  config.ci.toml  schema.sql  seed.sql
(+197 files in other folders)
