[package]
name = "realtime-proxy"
version = "0.1.0"
edition = "2021"
authors = ["CampusConnect Team"]
description = "High-concurrency HTTP/2 multiplexing SSE proxy server for Postgres NOTIFY events"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["http2", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures-util = "0.3"
hyper = { version = "1.4", features = ["full"] }
